fixed typo in last cell

--- a/train-own-object-detector/object_detector_training_pipeline.ipynb
+++ b/train-own-object-detector/object_detector_training_pipeline.ipynb
@@ -452,7 +452,7 @@
     "\n",
     "shutil.copyfile('object_detector_label_map.pbtxt', train_dir + 'data/object_detector_label_map.pbtxt')\n",
     "shutil.copyfile(tfrecord_train_path, train_dir + 'data/train.record')\n",
-    "shutil.copyfile(tfrecord_test_path, train_dir + 'data/test.reccord')\n",
+    "shutil.copyfile(tfrecord_test_path, train_dir + 'data/test.record')\n",
     "print(\"***Ensure pipeline config file in models/model is correct***\")"
    ]
   }
